[gd_scene load_steps=9 format=2]

[ext_resource path="res://Chars/Goofy/torso.png" type="Texture" id=1]
[ext_resource path="res://Chars/Goofy/rightarm0.png" type="Texture" id=2]
[ext_resource path="res://Chars/Goofy/rightleg.png" type="Texture" id=3]
[ext_resource path="res://Chars/Goofy/leftleg.png" type="Texture" id=4]
[ext_resource path="res://Chars/Goofy/rightupperarm.png" type="Texture" id=5]
[ext_resource path="res://Chars/Goofy/leftarm0.png" type="Texture" id=6]
[ext_resource path="res://Chars/Goofy/head0.png" type="Texture" id=7]
[ext_resource path="res://Chars/Goofy/Goofy.gd" type="Script" id=8]

[node name="Goofy" type="Position2D"]
position = Vector2( 333, 304 )
scale = Vector2( 2, 2 )
script = ExtResource( 8 )

[node name="Leftleg" type="Sprite" parent="."]
position = Vector2( -15, 0 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -19, -32 )

[node name="Torso" type="Sprite" parent="."]
position = Vector2( -2, -31 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -15, -41 )

[node name="Rightupperarm" type="Sprite" parent="Torso"]
position = Vector2( 10, -27 )
z_index = 1
texture = ExtResource( 5 )
centered = false
offset = Vector2( -3, -7 )

[node name="Rightarm0" type="Sprite" parent="Torso/Rightupperarm"]
position = Vector2( 10, 18 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -3, -28 )

[node name="Leftarm0" type="Sprite" parent="Torso"]
position = Vector2( -12, -27 )
z_index = -1
texture = ExtResource( 6 )
centered = false
offset = Vector2( -29, -5 )

[node name="Head0" type="Sprite" parent="Torso"]
position = Vector2( -2, -33 )
z_index = 1
texture = ExtResource( 7 )
offset = Vector2( 0, -22 )

[node name="Rightleg" type="Sprite" parent="."]
position = Vector2( 12, 4 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -16, -41 )
